tests/parser/compare-expression-error.stderr
error: expected expression
 --> $DIR/compare-expression-error.lox:1:6
  |
1 | 5 == /;
  |      ^
